# CGDK.asio

./: CMakeLists.txt  LICENSE  readme.md  release_note.md
example/: CMakeLists.txt
example/1.simple/: CGDK.asio.simple_client.vs17.sln  CGDK.asio.simple_server.vs17.sln  CMakeLists.txt  cgcii.asio.tcp_echo_client.vs17.sln  cgcii.asio.tcp_echo_server.vs17.sln  cgdk.asio.tcp_echo_client.vs17.sln  readme.md
example/1.simple/client/: CGDK.asio.simple_tcp_client.cpp  CGDK.asio.simple_tcp_client.vs17.vcxproj  CGDK.asio.simple_tcp_client.vs17.vcxproj.filters  CGDK.asio.tcp_echo_client.cpp  CMakeLists.txt  cgcii.asio.tcp_echo_client.cpp  cgcii.asio.tcp_echo_client.vs17.vcxproj  cgcii.asio.tcp_echo_client.vs17.vcxproj.filters  cgdk.asio.tcp_echo_client.cpp  cgdk.asio.tcp_echo_client.vs17.vcxproj
example/1.simple/server/: CGDK.asio.simple_tcp_server.cpp  CGDK.asio.simple_tcp_server.vs17.vcxproj  CGDK.asio.simple_tcp_server.vs17.vcxproj.filters  CGDK.asio.tcp_echo_server.cpp  CGDK.asio.tcp_echo_server.vs17.vcxproj  CMakeLists.txt  cgcii.asio.tcp_echo_server.cpp  cgcii.asio.tcp_echo_server.vs17.vcxproj  cgcii.asio.tcp_echo_server.vs17.vcxproj.filters  cgdk.asio.tcp_echo_server.cpp  cgdk.asio.tcp_echo_server.vs17.vcxproj  cgdk.asio.tcp_echo_server.vs17.vcxproj.filters  util.linux.cpp
example/2.tcp_echo_test/: CGDK.asio.tcp_echo_client.vs17.sln  CGDK.asio.tcp_echo_server.vs17.sln  CMakeLists.txt  readme.md
example/2.tcp_echo_test/client/: CGDK.asio.tcp_echo_client.cpp  CGDK.asio.tcp_echo_client.vs17.vcxproj  CGDK.asio.tcp_echo_client.vs17.vcxproj.filters  CGDK.asio.tcp_echo_server.console.vs17.vcxproj  CGDK.asio.tcp_echo_server.cpp  CMakeLists.txt  echo_client.cpp  echo_client.h
example/2.tcp_echo_test/server/: CGDK.asio.tcp_echo_server.console.cpp  CGDK.asio.tcp_echo_server.console.ex.cpp  CGDK.asio.tcp_echo_server.cpp  CGDK.asio.tcp_echo_server.ex.cpp  CGDK.asio.tcp_echo_server.vs17.vcxproj  CGDK.asio.tcp_echo_server.vs17.vcxproj.filters  CMakeLists.txt
example/3.simple_chatting/: CGDK.asio.simple_chatting_echo_client.vs17.sln  CGDK.asio.simple_chatting_echo_server.vs17.sln  CMakeLists.txt  definitions_message.h  readme.md
example/3.simple_chatting/client/: CGDK.asio.simple_chatting_echo_client.cpp  CGDK.asio.simple_chatting_echo_client.vs17.vcxproj  CGDK.asio.simple_chatting_echo_client.vs17.vcxproj.filters  CMakeLists.txt
example/3.simple_chatting/server/: CGDK.asio.simple_chatting_echo_server.cpp  CGDK.asio.simple_chatting_echo_server.vs17.vcxproj  CGDK.asio.simple_chatting_echo_server.vs17.vcxproj.filters  CMakeLists.txt  group_chatting.cpp  group_chatting.h  pch.h  socket_tcp.cpp  socket_tcp.h
example/4.execute/: CGDK.asio.execute.cpp  CGDK.asio.execute.sln  CGDK.asio.execute.vcxproj  CGDK.asio.execute.vcxproj.filters  CMakeLists.txt  vcpkg.json
example/5.group/: CGDK.asio.group_client.sln  CMakeLists.txt  definitions_message.h  readme.md
example/5.group/client/: CGDK.asio.group_client.cpp  CGDK.asio.group_client.vcxproj  CGDK.asio.group_client.vcxproj.filters  CMakeLists.txt
example/5.group/server/: CGDK.asio.group_server.cpp  CGDK.asio.group_server.vcxproj  CGDK.asio.group_server.vcxproj.filters  CMakeLists.txt  group_chatting.cpp  group_chatting.h  pch.cpp  pch.h  socket_tcp.cpp  socket_tcp.h
include/cgcii.asio/: asio.Nsocket_tcp_client.h  asio.h  asio.system.h
include/cgcii.asio/cgdk/buffers/: _basic_buffer.h  _buffer_common.h  _buffer_unreal.h
include/cgdk/: asio.h
include/cgdk/asio/: Iexecutable.h  Igroup.h  Igroupable.h  Imessage_transmitter.h  Imessageable.h  Ischedulable.h  Isocket_tcp.h  Nacceptor.h  Nconnect_requestable.h  Nconnective.h  Nconnector.h  Nsocket_tcp.h  Nsocket_tcp_async.h  Nsocket_tcp_async_gather.h  Nsocket_tcp_client.h  Nsocket_tcp_gather.h  Nsocket_tcp_gather_buffer.h  Nstatistics.h  acceptor.h  asio.h  cgdk.asio.Isocket_tcp.h  cgdk.asio.Nconnect_requestable.h  connector.h  definitions.h  executor.single.h  group.list.h  group.list.inl  message_transmitter.h  schedulable.Iexecutable.h  schedulable.executable.h  schedulable_manager.h  system.h
include/cgdk/buffers/: _basic_buffer.h  _basic_buffer.inl  _buffer_view.h
src/: CGDK.asio.vs17.sln  CGDK.asio.vs17.vcxproj  CMakeLists.txt  Isocket_tcp.cpp  Nacceptor.cpp  Nconnect_requestable.cpp  Nconnective.cpp  Nconnector.cpp  Nsocket_tcp.cpp  Nsocket_tcp_async.cpp  Nsocket_tcp_async_gather.cpp  Nsocket_tcp_gather.cpp  Nsocket_tcp_gather_buffer.cpp  Nstatistics.cpp  asio.Isocket_tcp.cpp  asio.Nacceptor.cpp  asio.Nconnect_requestable.cpp  asio.Nconnective.cpp  asio.Nconnector.cpp  asio.Nsocket_tcp.cpp  asio.Nsocket_tcp_gather.cpp  asio.Nsocket_tcp_gather_buffer.cpp  asio.Nstatistics.cpp  asio.system.cpp  cgcii.asio.vs17.sln  cgcii.asio.vs17.vcxproj  cgdk.asio.Isocket_tcp.cpp  cgdk.asio.Nacceptor.cpp  cgdk.asio.Nconnect_requestable.cpp  cgdk.asio.Nconnective.cpp  cgdk.asio.Nconnector.cpp  cgdk.asio.Nsocket_tcp.cpp  cgdk.asio.Nsocket_tcp_gather.cpp  cgdk.asio.Nsocket_tcp_gather_buffer.cpp  cgdk.asio.Nstatistics.cpp  cgdk.asio.system.cpp  cgdk.asio.vs17.vcxproj  cgdk.asio.vs17.vcxproj.filters  executor.single.cpp  message_transmitter.cpp  (+2 more)
